Sat, Dec 11, 2021, 1:51 AM +00:00

--- a/FINAL_project/templates/edit.html
+++ b/FINAL_project/templates/edit.html
@@ -10,10 +10,10 @@
 
 <form action="/edit" method="post">
     <div class="mb-3">
-        <input class="form-control mx-auto w-auto" name="title" id="title" value="{{post.title}}">
+        <input class="form-control mx-auto w-auto" name="title" id="title" value={{post.title}}>
     </div>
     <div class="mb-3">
-        <input class="form-control mx-auto w-auto" name="body" id="body" value="{{post.body}}">
+        <input class="form-control mx-auto w-auto" name="body" id="body" value={{post.body}}>
     </div>
     <button class="btn btn-primary" type="submit">Update</button>
 </form>
