Sat, Dec 11, 2021, 3:11 AM +00:00

--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -10,7 +10,7 @@
 <table class="table tablestriped">
     <thead>
         <tr>
-            <th class="text-start">ID</th>
+            <th class="text-start" style="display:none;">ID</th>
             <th class="text-start">Title</th>
             <th class="text-start">Post</th>
             <th class="text-start">Comments</th>
@@ -23,7 +23,7 @@
         <div class="container">
             <div class="post-preview">
                 <tr>
-                    <td class="text-start">{{row.post_id}}</td>
+                    <td class="text-start" style="display:none;">{{row.post_id}}</td>
                     <td class="text-start">{{row.title}}</td>
                     <td class="text-start">{{row.body}}</td>
                     <td class="text-start">
