--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -28,7 +28,7 @@
                     <td class="text-start">{{row.body}}</td>
                     <td class="text-start">
                         <ul class="list-group list-group-flush">
-                            {# display comments #}
+                            <!-- display comments -->
                             {% for each in comment %}
                                 {% if each.post_id == row.post_id %}
                                     <li class="list-group-item">{{each.content}}</li>
@@ -37,7 +37,7 @@
                         </ul>
                     </td>
                     <td class="text-start">
-                        {# reply to each post #}
+                         <!-- reply to each post -->
                         <form action="/comment" method="post">
                             <div class="input-group mb-3">
                                 <input type="text" class="form-control" name="reply" id="reply" placeholder="Leave a comment" aria-describedby="basic-addon2">
