Sat, Dec 11, 2021, 5:50 AM +00:00

--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -40,6 +40,7 @@
                          <!-- reply to each post -->
                         <form action="/comment" method="post">
                             <div class="input-group mb-3">
+                                <span class="textarea" role="textbox" contenteditable></span>
                                 <input type="text" class="form-control" name="reply" id="reply" placeholder="Leave a comment" aria-describedby="basic-addon2">
                                 <div class="input-group-append">
                                     <button class="btn btn-outline-primary" type="submit" name={{row.post_id}}>Reply</button>
