--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -40,8 +40,8 @@
                          <!-- reply to each post -->
                         <form action="/comment" method="post">
                             <div class="input-group mb-3">
-                                <span class="textarea" role="textbox" contenteditable></span>
-                                <input type="text" class="form-control" name="reply" id="reply" placeholder="Leave a comment" aria-describedby="basic-addon2">
+                                <span class="textarea" role="textbox" name="reply" id="reply" placeholder="Leave a comment" aria-describedby="basic-addon2" contenteditable></span>
+                                {# <input type="text" class="form-control" name="reply" id="reply" placeholder="Leave a comment" aria-describedby="basic-addon2"> #}
                                 <div class="input-group-append">
                                     <button class="btn btn-outline-primary" type="submit" name={{row.post_id}}>Reply</button>
                                 </div>
