Sat, Dec 11, 2021, 6:19 AM +00:00

--- a/FINAL_project/templates/edit.html
+++ b/FINAL_project/templates/edit.html
@@ -17,7 +17,7 @@
     <div class="mb-3">
         <input class="form-control mx-auto w-auto" name="body" id="body" value={{post.body}}>
     </div>
-    <button class="btn btn-primary" type="submit">Update</button>
+    <button class="btn btn-primary" type="submit" name={{history.post_id}}>Update</button>
 </form>
 
 
