--- a/FINAL_project/templates/edit.html
+++ b/FINAL_project/templates/edit.html
@@ -12,10 +12,12 @@
     {# input info from history because we'll need post_id#}
     {% import 'history.html' as history %}
     <div class="mb-3">
-        <input class="form-control mx-auto w-auto" name="title" id="title" value={{post.title}}>
+        {# <input class="form-control mx-auto w-auto" name="title" id="title" value={{post.title}}> #}
+        <input class="form-control mx-auto w-auto" name="title" id="title">
     </div>
     <div class="mb-3">
-        <input class="form-control mx-auto w-auto" name="body" id="body" value={{post.body}}>
+        {# <input class="form-control mx-auto w-auto" name="body" id="body" value={{post.body}}> #}
+        <input class="form-control mx-auto w-auto" name="body" id="body">
     </div>
     <button class="btn btn-primary" type="submit" name={{history.post_id}}>Update</button>
 </form>
