Sat, Dec 11, 2021, 6:26 AM +00:00

--- a/FINAL_project/templates/history.html
+++ b/FINAL_project/templates/history.html
@@ -21,7 +21,7 @@
                     <td class="text-start">{{row.body}}</td>
                     <td class="text-end">{{row.created}}</td>
                     {# test #}
-                    {% set post_id = {{row.post_id}} %}
+                    {% set post_id = row.post_id %}
                     <td class="text-end">
                         {# delete post function #}
                         <form action="/delete" method="post">
