--- a/FINAL_project/templates/history.html
+++ b/FINAL_project/templates/history.html
@@ -33,7 +33,7 @@
                         {# edit post function #}
                         <form action="/edit" method="post">
                             <input type="hidden" name="edit">
-                            <a class="btn btn-outline-info" href="/edit" role="button" type="submit" name={{post_id}}>Edit</a>
+                            <a class="btn btn-outline-info" href="/edit" role="button" type="submit" name={{row.post_id}}>Edit</a>
                         </form>
                     </td>
                 </tr>
