--- a/FINAL_project/templates/history.html
+++ b/FINAL_project/templates/history.html
@@ -31,7 +31,7 @@
                     </td>
                     <td class="text-end">
                         {# edit post function #}
-                        <form action="/edit" method="post">
+                        <form action="/edit" method="get">
                             <input type="hidden" name="edit">
                             <a class="btn btn-outline-info" href="/edit" role="button" type="submit" name={{row.post_id}}>Edit</a>
                         </form>
