--- a/FINAL_project/templates/edit.html
+++ b/FINAL_project/templates/edit.html
@@ -19,7 +19,7 @@
         {# <input class="form-control mx-auto w-auto" name="body" id="body" value={{post.body}}> #}
         <input class="form-control mx-auto w-auto" name="body" id="body">
     </div>
-    <button class="btn btn-primary" type="submit" name={{history.post_id}}>Update</button>
+    <button class="btn btn-primary" type="submit">Update</button>
 </form>
 
 
