Sat, Dec 11, 2021, 7:02 AM +00:00

--- a/FINAL_project/templates/history.html
+++ b/FINAL_project/templates/history.html
@@ -31,7 +31,7 @@
                         {# edit post function #}
                         <form action="/edit" method="get">
                             <input type="hidden" name="edit">
-                            <a class="btn btn-outline-info" href="/edit" role="button" type="submit" name={{row.post_id}}>Edit</a>
+                            <a class="btn btn-outline-info" href="/edit" role="button" type="submit" id={{row.post_id}}>Edit</a>
                         </form>
                     </td>
                 </tr>
