--- a/FINAL_project/templates/history.html
+++ b/FINAL_project/templates/history.html
@@ -29,9 +29,9 @@
                     </td>
                     <td class="text-end">
                         {# edit post function #}
-                        <form action="/edit" method="get">
+                        <form action="/edit" method="post">
                             <input type="hidden" name="edit">
-                            <a class="btn btn-outline-info" href="/edit" role="button" type="submit" name={{row.post_id}}>Edit</a>
+                            <a class="btn btn-outline-info" role="button" type="submit" name={{row.post_id}} href="/edit">Edit</a>
                         </form>
                     </td>
                 </tr>
