--- a/FINAL_project/templates/history.html
+++ b/FINAL_project/templates/history.html
@@ -29,7 +29,7 @@
                     </td>
                     <td class="text-end">
                         {# edit post function #}
-                        <form action="/edit" method="post">
+                        <form action="/edit" method="get">
                             <input type="hidden" name="edit">
                             <a class="btn btn-outline-info" role="button" type="submit" name={{row.post_id}} href="/edit">Edit</a>
                         </form>
