--- a/FINAL_project/templates/layout.html
+++ b/FINAL_project/templates/layout.html
@@ -33,6 +33,10 @@
                             <li class="nav-item"><a class="nav-link" href="/post">Say Something</a></li>
                             <li class="nav-item"><a class="nav-link" href="/history">My Posts</a></li>
                             <li class="nav-item"><a class="nav-link" href="/seekhelp">Seek Help</a></li>
+                            <form class="form-inline">
+                                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                            </form>
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/reset_password">Reset Password</a></li>
