--- a/FINAL_project/templates/layout.html
+++ b/FINAL_project/templates/layout.html
@@ -37,8 +37,8 @@
                         <ul class="navbar-nav ms-auto mt-2">
                             <li class="nav-item">
                             <form class="form-inline">
-                                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                                <input type="text" class="form-control" placeholder="Search post by keyword" name="search" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                                <button class="btn btn-outline-success" type="submit">Search</button>
                             </form>
                             </li>
                             <li class="nav-item"><a class="nav-link" href="/reset_password">Reset Password</a></li>
