--- a/FINAL_project/templates/layout.html
+++ b/FINAL_project/templates/layout.html
@@ -37,8 +37,12 @@
                         <ul class="navbar-nav ms-auto mt-2">
                             <li class="nav-item">
                             <form class="form-inline">
-                                <input type="text" class="form-control" placeholder="Search post by keyword" name="search" aria-label="Recipient's username" aria-describedby="basic-addon2">
-                                <button class="btn btn-outline-success" type="submit">Search</button>
+                                <div class="input-group mb-3">
+                                    <input type="text" class="form-control" placeholder="Search post by keyword" name="search" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                                    <div class="input-group-append">
+                                    <button class="btn btn-outline-success" type="submit">Search</button>
+                                    </div>
+                                </div>
                             </form>
                             </li>
                             <li class="nav-item"><a class="nav-link" href="/reset_password">Reset Password</a></li>
