Sat, Dec 11, 2021, 7:33 PM +00:00

--- a/FINAL_project/templates/edit.html
+++ b/FINAL_project/templates/edit.html
@@ -12,7 +12,7 @@
     {% for row in post %}
     <div class="mb-3">
         {# <input class="form-control mx-auto w-auto" name="title" id="title" value={{post.title}}> #}
-        <input class="form-control mx-auto w-auto" name="title" id="title">
+        <input class="form-control mx-auto w-auto" name="title" id="title" placeholder={{row.title}}>
     </div>
     <div class="mb-3">
         {# <input class="form-control mx-auto w-auto" name="body" id="body" value={{post.body}}> #}
