Sat, Dec 11, 2021, 7:38 PM +00:00

--- a/FINAL_project/templates/edit.html
+++ b/FINAL_project/templates/edit.html
@@ -6,6 +6,10 @@
 
 {% block main %}
 
+{% block header %}
+<h1 class="display-4 font-weight-bold">Edit This Post</h1>
+{% endblock %}
+
 <h2>Edit This Post</h2>
 
 <form action="/edit" method="post">
