--- a/FINAL_project/templates/layout.html
+++ b/FINAL_project/templates/layout.html
@@ -52,6 +52,7 @@
 
         <div style="background: url(https://wallpaperaccess.com/full/3088717.jpg)" class="jumbotron bg-cover text-white">
         <div class="container py-5 text-center">
+        {% block header %}{% endblock %}
         <h1 class="display-4 font-weight-bold">Bootstrap static header</h1>
         <p class="font-italic mb-0">Using simple jumbotron-style component, create a nice Bootstrap 4 header with a background image.</p>
             </a>
