--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -6,6 +6,13 @@
 
 {% block main %}
 
+{% block header %}
+<h1 class="display-4 font-weight-bold">What's going on in the Tree Hole?</h1>
+<p class="font-italic mb-0">Using simple jumbotron-style component, create a nice Bootstrap 4 header with a background image.</p>
+    </a>
+</p>
+{% endblock %}
+
 <!-- Display Blog posts -->
 <table class="table tablestriped">
     <thead>
