Sat, Dec 11, 2021, 7:40 PM +00:00

--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -7,8 +7,8 @@
 {% block main %}
 
 {% block header %}
-<h1 class="display-4 font-weight-bold">What's going on in the Tree Hole?</h1>
-<p class="font-italic mb-0">Using simple jumbotron-style component, create a nice Bootstrap 4 header with a background image.</p>
+<h1 class="display-4 font-weight-bold">Home</h1>
+<p class="font-italic mb-0">What's going on in the Tree Hole?</p>
     </a>
 </p>
 {% endblock %}
