Sat, Dec 11, 2021, 7:50 PM +00:00

--- a/FINAL_project/static/styles.css
+++ b/FINAL_project/static/styles.css
@@ -4,6 +4,10 @@ nav .navbar-brand
     font-size: xx-large;
 }
 
+body {
+    background-image: url("https://wallpapershome.com/images/pages/pic_v/5348.jpg");
+ }
+
 /* Colors for brand */
 nav .navbar-brand .blue
 {
