Sat, Dec 11, 2021, 7:53 PM +00:00

--- a/FINAL_project/static/styles.css
+++ b/FINAL_project/static/styles.css
@@ -5,7 +5,7 @@ nav .navbar-brand
 }
 
 body {
-    background-image: url("https://wallpapershome.com/images/pages/pic_v/5348.jpg");
+    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTXDUz5kky4w_mD4sw0wsjUPDps1Ucu4eN3PwsjifTtKc9RMgLDIjeKsRnZ3Isst4_De4Y&usqp=CAU");
  }
 
 /* Colors for brand */
