--- a/FINAL_project/templates/layout.html
+++ b/FINAL_project/templates/layout.html
@@ -36,7 +36,7 @@
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
                             <li class="nav-item">
-                            <form class="form-inline">
+                            <form form action="/search" method="post">
                                 <div class="input-group mb-3">
                                     <input type="text" class="form-control" placeholder="Search post by keyword" name="search" aria-label="Recipient's username" aria-describedby="basic-addon2">
                                     <div class="input-group-append">
