--- a/FINAL_project/static/styles.css
+++ b/FINAL_project/static/styles.css
@@ -5,7 +5,7 @@ nav .navbar-brand
 }
 
 body {
-    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTXDUz5kky4w_mD4sw0wsjUPDps1Ucu4eN3PwsjifTtKc9RMgLDIjeKsRnZ3Isst4_De4Y&usqp=CAU");
+    background-color: ;
  }
 
 /* Colors for brand */
