Sat, Dec 11, 2021, 8:00 PM +00:00

--- a/FINAL_project/templates/layout.html
+++ b/FINAL_project/templates/layout.html
@@ -38,7 +38,7 @@
                             <li class="nav-item">
                             <form form action="/search" method="post">
                                 <div class="input-group mb-3">
-                                    <input type="text" class="form-control" placeholder="Search post by keyword" name="search" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                                    <input type="text" class="form-control" placeholder="Search post by keyword" name="keyword" aria-describedby="basic-addon2">
                                     <div class="input-group-append">
                                     <button class="btn btn-outline-success" type="submit">Search</button>
                                     </div>
