Sat, Dec 11, 2021, 8:03 PM +00:00

--- a/FINAL_project/static/styles.css
+++ b/FINAL_project/static/styles.css
@@ -5,7 +5,7 @@ nav .navbar-brand
 }
 
 body {
-    background-color: #EAEFC8;
+    background-image: url("https://images.pond5.com/clean-light-green-background-smooth-footage-090804049_prevstill.jpeg");
  }
 
 /* Colors for brand */
