--- a/FINAL_project/templates/edit.html
+++ b/FINAL_project/templates/edit.html
@@ -8,7 +8,7 @@
 
 <h2>Edit This Post</h2>
 
-<form action="/edit" method="post">
+<form action="/edit/<post_id>" method="post">
     {% for row in post %}
     <div class="mb-3">
         {# <input class="form-control mx-auto w-auto" name="title" id="title" value={{post.title}}> #}
