--- a/FINAL_project/templates/history.html
+++ b/FINAL_project/templates/history.html
@@ -4,6 +4,11 @@
     Index
 {% endblock %}
 
+{% block header %}
+<h1 class="display-4 font-weight-bold">Home</h1>
+<p class="font-italic mb-0">What's going on in the Tree Hole?</p>
+{% endblock %}
+
 
 {% block main %}
     <table class="table tablestriped">
