Sat, Dec 11, 2021, 8:41 PM +00:00

--- a/FINAL_project/templates/history.html
+++ b/FINAL_project/templates/history.html
@@ -5,8 +5,8 @@
 {% endblock %}
 
 {% block header %}
-<h1 class="display-4 font-weight-bold">Home</h1>
-<p class="font-italic mb-0">What's going on in the Tree Hole?</p>
+<h1 class="display-4 font-weight-bold">My Posts.</h1>
+<p class="font-italic mb-0">Welcome to Yale Tree Hole, a forum without memories.</p>
 {% endblock %}
 
 
