--- a/FINAL_project/templates/hello.html
+++ b/FINAL_project/templates/hello.html
@@ -4,10 +4,16 @@
     Welcome
 {% endblock %}
 
+{% block header %}
+<h1 class="display-4 font-weight-bold">Hi there.</h1>
+<p class="font-italic mb-0">Welcome to Yale Tree Hole, a forum without memories.</p>
+{% endblock %}
+
+
 {% block main %}
 <div>
-    <p>This is an open forum without memories. Anything you post or respond to here will be automatically deleted after three days.</p>
-    <p>We hope you will feel safe to speak your mind here - those thoughts and ambiguities you somehow can’t really share with friends and family. We hope you find here a place of comfort and a source of support. This means we will need YOU to help create that environment for everyone. So, we ask you to exercise your common sense when posting/replying, specifically:</p>
+    <p>Anything you post or respond to here will be automatically deleted after 24 hours.</p>
+    <p>We hope you will feel safe to speak your mind here. We hope you find here a place of comfort and a source of support. This means we will need YOU to help create that environment for everyone. So, we ask you to exercise your common sense when posting/replying, specifically:</p>
     <p>Don’t say things you wouldn’t want to hear being said to you. </p>
     <p>Don’t post content that you know will get you/anyone else into legal trouble. </p>
     <p>If you think you might need professional mental health support, please click <a href="https://yalehealth.yale.edu/directory/departments/mental-health-counseling">here.</a></p>
@@ -17,3 +23,4 @@
 
 </div>
 {% endblock %}
+
