--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -5,10 +5,9 @@
 {% endblock %}
 
 
-
 {% block header %}
-<h1 class="display-4 font-weight-bold">Home</h1>
-<p class="font-italic mb-0">What's going on in the Tree Hole?</p>
+<h1 class="display-4 font-weight-bold">My Posts.</h1>
+<p class="font-italic mb-0"></p>
 {% endblock %}
 
 {% block main %}
