Sat, Dec 11, 2021, 8:47 PM +00:00

--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -5,9 +5,10 @@
 {% endblock %}
 
 
+
 {% block header %}
-<h1 class="display-4 font-weight-bold">My Posts.</h1>
-<p class="font-italic mb-0"></p>
+<h1 class="display-4 font-weight-bold">Home</h1>
+<p class="font-italic mb-0">What's going on in the Tree Hole?</p>
 {% endblock %}
 
 {% block main %}
