--- a/FINAL_project/templates/history.html
+++ b/FINAL_project/templates/history.html
@@ -6,7 +6,7 @@
 
 {% block header %}
 <h1 class="display-4 font-weight-bold">My Posts.</h1>
-<p class="font-italic mb-0">Welcome to Yale Tree Hole, a forum without memories.</p>
+<p class="font-italic mb-0">These are what I've said ... </p>
 {% endblock %}
 
 
