Sat, Dec 11, 2021, 8:48 PM +00:00

--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -4,6 +4,11 @@
     Home
 {% endblock %}
 
+{% block header %}
+<h1 class="display-4 font-weight-bold">Home</h1>
+<p class="font-italic mb-0">What's going on in the Tree Hole?</p>
+{% endblock %}
+
 {% block main %}
 
 <!-- Display Blog posts -->
@@ -40,7 +45,7 @@
                          <!-- reply to each post -->
                         <form action="/comment" method="post">
                                 <input type="text" class="form-control" name="reply" id="reply" placeholder="Leave a comment" aria-describedby="basic-addon2">
-                                    <button class="btn btn-outline-primary" type="submit" name={{row.post_id}}>Reply</button>
+                                    <button class="btn btn-outline-success" type="submit" name={{row.post_id}}>Reply</button>
                         </form>
                     </td>
                     <td class="text-end">{{row.created}}</td>
