--- a/FINAL_project/templates/post.html
+++ b/FINAL_project/templates/post.html
@@ -4,10 +4,13 @@
     About
 {% endblock %}
 
-{% block main %}
+{% block header %}
+<h1 class="display-4 font-weight-bold">Say Something</h1>
+<p class="font-italic mb-0">Remember, everything will be gone in 24 hours. </p>
+{% endblock %}
 
-<h2>What's on your mind today? </h2>
-<br>
+
+{% block main %}
 <form action="/post" method="post">
     <div class="mb-3">
         <input class="form-control mx-auto w-auto" name="title" id="title" placeholder="title">
