Sat, Dec 11, 2021, 8:52 PM +00:00

--- a/FINAL_project/templates/seekhelp.html
+++ b/FINAL_project/templates/seekhelp.html
@@ -4,9 +4,13 @@
     Seek Help
 {% endblock %}
 
-{% block main %}
+{% block header %}
+<h1 class="display-4 font-weight-bold">Seek Help</h1>
+<p class="font-italic mb-0">You can find more professional support here.</p>
+{% endblock %}
 
-<p> You can find more professional support here.</p>
+
+{% block main %}
 
 <p><a href="https://yalehealth.yale.edu/directory/departments/mental-health-counseling">Yale Mental Health & Counseling</a></p>
 
