Sat, Dec 11, 2021, 8:53 PM +00:00

--- a/FINAL_project/templates/seekhelp.html
+++ b/FINAL_project/templates/seekhelp.html
@@ -4,6 +4,11 @@
     Seek Help
 {% endblock %}
 
+{% block header %}
+<h1 class="display-4 font-weight-bold">Seek Help</h1>
+<p class="font-italic mb-0">You can find more professional support here.</p>
+{% endblock %}
+
 {% block main %}
 
 <p> You can find more professional support here.</p>
