--- a/FINAL_project/templates/seekhelp.html
+++ b/FINAL_project/templates/seekhelp.html
@@ -18,7 +18,7 @@
 <p><a href="https://yalecollege.yale.edu/getting-help/yale-college-community-care">Yale College Community Care</a></p>
 <p><a href="https://walden.sites.yale.edu/">Walden Peer Counseling </a><p>
 
-<img src="seekhelp.jpg">
+<img src="/FINAL_project/templates/seekhelp.jpg">
 
 
 {% endblock %}
