--- a/FINAL_project/templates/seekhelp.html
+++ b/FINAL_project/templates/seekhelp.html
@@ -11,14 +11,12 @@
 
 {% block main %}
 
-<p> You can find more professional support here.</p>
-
 <p><a href="https://yalehealth.yale.edu/directory/departments/mental-health-counseling">Yale Mental Health & Counseling</a></p>
 
 <p><a href="https://yalecollege.yale.edu/getting-help/yale-college-community-care">Yale College Community Care</a></p>
 <p><a href="https://walden.sites.yale.edu/">Walden Peer Counseling </a><p>
 
-<img src="/FINAL_project/templates/seekhelp.jpg">
+<img src="seekhelp.jpg">
 
 
 {% endblock %}
