--- a/FINAL_project/templates/post.html
+++ b/FINAL_project/templates/post.html
@@ -18,7 +18,7 @@
     <div class="mb-3">
         <textarea class="form-control" rows="3" name="body" id="post" placeholder="What's on your mind today?"></textarea>
     </div>
-    <button class="btn btn-primary" type="submit">Post</button>
+    <button class="btn btn-outline-success" type="submit">Post</button>
 </form>
 
 
