Sat, Dec 11, 2021, 8:59 PM +00:00

--- a/FINAL_project/templates/edit.html
+++ b/FINAL_project/templates/edit.html
@@ -22,7 +22,7 @@
         {# <input class="form-control mx-auto w-auto" name="body" id="body" value={{post.body}}> #}
         <input class="form-control mx-auto w-auto" name="body" id="body" placeholder="New Post">
     </div>
-    <button class="btn btn-primary" type="submit">Update</button>
+    <button class="btn btn-outline-success" type="submit">Update</button>
 </form>
 {% endfor %}
 
