--- a/FINAL_project/templates/history.html
+++ b/FINAL_project/templates/history.html
@@ -21,17 +21,17 @@
                     <td class="text-start">{{row.body}}</td>
                     <td class="text-end">{{row.created}}</td>
                     <td class="text-end">
-                        {# delete post function #}
-                        <form action="/delete" method="post">
-                            <input type="hidden" name="delete">
-                            <button class="btn btn-outline-primary" type="submit" name={{row.post_id}} onclick="return confirm('Are you sure you want to delete this post and all its comments?');">Delete</button>
-                        </form>
-                    </td>
-                    <td class="text-end">
                         {# edit post function #}
                         <form action="/edit" method="get">
                             <input type="hidden" name="edit">
-                            <a class="btn btn-outline-info" role="button" type="submit" name={{row.post_id}} href="/edit/{{row.post_id}}">Edit</a>
+                            <a class="btn btn-outline-success" role="button" type="submit" name={{row.post_id}} href="/edit/{{row.post_id}}">Edit</a>
+                        </form>
+                    </td>
+                    <td class="text-end">
+                        {# delete post function #}
+                        <form action="/delete" method="post">
+                            <input type="hidden" name="delete">
+                            <button class="btn btn-outline-danger" type="submit" name={{row.post_id}} onclick="return confirm('Are you sure you want to delete this post and all its comments?');">Delete</button>
                         </form>
                     </td>
                 </tr>
