Sat, Dec 11, 2021, 9:09 PM +00:00

--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -13,10 +13,10 @@
 
 <!-- Display Blog posts -->
 <table class="table tablestriped">
-    <thead>
+    <thead class="bg-success">
         <tr>
             <th class="text-start" style="display:none;">ID</th>
-            <th class="text-start">Title</th>
+            <th class="text-start" >Title</th>
             <th class="text-start">Post</th>
             <th class="text-start">Comments</th>
             <th class="text-start">Reply</th>
