Sat, Dec 11, 2021, 9:11 PM +00:00

--- a/FINAL_project/static/styles.css
+++ b/FINAL_project/static/styles.css
@@ -4,12 +4,8 @@ nav .navbar-brand
     font-size: xx-large;
 }
 
-body {
-    background-image: url("https://images.pond5.com/clean-light-green-background-smooth-footage-090804049_prevstill.jpeg");
-}
-
-img {
-    opacity: 0.5;
+* {
+    font-family: sans-serif;
   }
 
 /* Colors for brand */
