Sat, Dec 11, 2021, 9:13 PM +00:00

--- a/FINAL_project/templates/history.html
+++ b/FINAL_project/templates/history.html
@@ -4,6 +4,10 @@
     History
 {% endblock %}
 
+{% block header %}
+<h1 class="display-4 font-weight-bold">My Posts</h1>
+<p class="font-italic mb-0">Remember, everything will be gone in 24 hours. </p>
+{% endblock %}
 
 {% block main %}
     <table class="table tablestriped">
