Sat, Dec 11, 2021, 9:28 PM +00:00

--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -13,10 +13,10 @@
 
 <!-- Display Blog posts -->
 <table class="table tablestriped">
-    <thead class="table-success">
+    <thead>
         <tr>
             <th class="text-start" style="display:none;">ID</th>
-            <th class="text-start" style="color:white; ">Title</th>
+            <th class="text-start" style="color:green ">Title</th>
             <th class="text-start">Post</th>
             <th class="text-start">Comments</th>
             <th class="text-start">Reply</th>
