--- a/FINAL_project/static/styles.css
+++ b/FINAL_project/static/styles.css
@@ -4,6 +4,20 @@ nav .navbar-brand
     font-size: xx-large;
 }
 
+html, body
+{
+    padding:0;
+    margin:0;
+    height:100%;
+}
+
+footer
+{
+    position: absolute;
+    bottom: 0;
+    left:0;
+    right:0;
+}
 
 /* Colors for brand */
 nav .navbar-brand .blue
