Sat, Dec 11, 2021, 9:31 PM +00:00

--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -16,7 +16,7 @@
     <thead>
         <tr>
             <th class="text-start" style="display:none;">ID</th>
-            <th class="text-start" style="color:green ">Title</th>
+            <th class="text-start">Title</th>
             <th class="text-start">Post</th>
             <th class="text-start">Comments</th>
             <th class="text-start">Reply</th>
