--- a/FINAL_project/static/styles.css
+++ b/FINAL_project/static/styles.css
@@ -11,12 +11,25 @@ html, body
     height:100%;
 }
 
+page-container
+{
+    position: relative;
+    min-height:100vh;
+}
+
+content-wrap
+{
+    padding-bottom:2.5rem;
+}
+
 footer
 {
     position: absolute;
     bottom: 0;
     left:0;
     right:0;
+    width:100%;
+    height:2.5rem;
 }
 
 /* Colors for brand */
