Sat, Dec 11, 2021, 9:37 PM +00:00

--- a/FINAL_project/static/styles.css
+++ b/FINAL_project/static/styles.css
@@ -4,9 +4,9 @@ nav .navbar-brand
     font-size: xx-large;
 }
 
-* {
+/* * {
     font-family: Papyrus;
-  }
+  } */
 
 /* Colors for brand */
 nav .navbar-brand .blue
