Sat, Dec 11, 2021, 9:44 PM +00:00

--- a/FINAL_project/templates/hello.html
+++ b/FINAL_project/templates/hello.html
@@ -18,7 +18,7 @@
     <p>Don’t post content that you know will get you/anyone else into legal trouble. </p>
     <p>If you think you might need professional mental health support, please click <a href="https://yalehealth.yale.edu/directory/departments/mental-health-counseling">here.</a></p>
     <a href="/index">
-    <button type="button" class="btn btn-outline-primary" aria-describedby="basic-addon2">Click here if you are ready to enter Yale Tree Hole. </button>
+    <button type="button" class="btn btn-outline-success">Click here if you are ready to enter Yale Tree Hole. </button>
     </a>
 
 </div>
