--- a/FINAL_project/static/styles.css
+++ b/FINAL_project/static/styles.css
@@ -4,11 +4,11 @@ nav .navbar-brand
     font-size: xx-large;
 }
 
-<<<<<<< HEAD
-/* * {
+
+* {
     font-family: Papyrus;
-  } */
-=======
+  }
+
 html, body
 {
     padding:0;
@@ -36,7 +36,6 @@ footer
     width:100%;
     height:2.5rem;
 }
->>>>>>> 777000b3b75659d2cc8328ab161c63bef6c9c27e
 
 /* Colors for brand */
 nav .navbar-brand .blue
