--- a/FINAL_project/templates/post.html
+++ b/FINAL_project/templates/post.html
@@ -16,7 +16,7 @@
         <input class="form-control mx-auto w-auto" name="title" id="title" placeholder="title">
     </div>
     <div class="mb-3">
-        <textarea class="form-control" rows="3" name="body" id="post" placeholder="What's on your mind today?"></textarea>
+        <textarea class="form-control mx-auto w-auto" rows="10" cols="100" name="body" id="post" placeholder="What's on your mind today?"></textarea>
     </div>
     <button class="btn btn-outline-success" type="submit">Post</button>
 </form>
