Sat, Dec 11, 2021, 9:58 PM +00:00

--- a/FINAL_project/static/styles.css
+++ b/FINAL_project/static/styles.css
@@ -13,10 +13,9 @@ html, body
 
 page-container
 {
-    position: relative;
-    min-height:100vh;
-    height: inherit;
-    width: inherit;
+    position: absolute;
+    min-height:100%;
+    margin-bottom: -50px;
 }
 
 content-wrap
