--- a/FINAL_project/templates/layout.html
+++ b/FINAL_project/templates/layout.html
@@ -18,47 +18,44 @@
     </head>
 
     <body>
-    <div id="page-container">
-        <div id="content-wrap">
-            <nav class="bg-light border navbar navbar-expand-md navbar-light">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="/"> <span class="green">Yale Tree Hole</span></a>
-                    <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbar">
-                        {% if session["user_id"] %}
-                            <ul class="navbar-nav me-auto mt-2">
-                                <li class="nav-item"><a class="nav-link" href="/index">Home</a></li>
-                                <li class="nav-item"><a class="nav-link" href="/">About</a></li>
-                                <li class="nav-item"><a class="nav-link" href="/post">Say Something</a></li>
-                                <li class="nav-item"><a class="nav-link" href="/history">My Posts</a></li>
-                                <li class="nav-item"><a class="nav-link" href="/seekhelp">Seek Help</a></li>
-                            </ul>
-                            <ul class="navbar-nav ms-auto mt-2">
-                                <li class="nav-item">
-                                <form form action="/search" method="post">
-                                    <div class="input-group mb-3">
-                                        <input type="text" class="form-control" placeholder="Search post by keyword" name="keyword" aria-describedby="basic-addon2">
-                                        <div class="input-group-append">
-                                        <button class="btn btn-outline-success" type="submit">Search</button>
-                                        </div>
+        <nav class="bg-light border navbar navbar-expand-md navbar-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/"> <span class="green">Yale Tree Hole</span></a>
+                <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbar">
+                    {% if session["user_id"] %}
+                        <ul class="navbar-nav me-auto mt-2">
+                            <li class="nav-item"><a class="nav-link" href="/index">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/">About</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/post">Say Something</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/history">My Posts</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/seekhelp">Seek Help</a></li>
+                        </ul>
+                        <ul class="navbar-nav ms-auto mt-2">
+                            <li class="nav-item">
+                            <form form action="/search" method="post">
+                                <div class="input-group mb-3">
+                                    <input type="text" class="form-control" placeholder="Search post by keyword" name="keyword" aria-describedby="basic-addon2">
+                                    <div class="input-group-append">
+                                    <button class="btn btn-outline-success" type="submit">Search</button>
                                     </div>
-                                </form>
-                                </li>
-                                <li class="nav-item"><a class="nav-link" href="/reset_password">Reset Password</a></li>
-                                <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
-                            </ul>
-                        {% else %}
-                            <ul class="navbar-nav ms-auto mt-2">
-                                <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
-                                <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
-                            </ul>
-                        {% endif %}
-                    </div>
+                                </div>
+                            </form>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" href="/reset_password">Reset Password</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
+                        </ul>
+                    {% else %}
+                        <ul class="navbar-nav ms-auto mt-2">
+                            <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
+                        </ul>
+                    {% endif %}
                 </div>
-            </nav>
-        </div>
+            </div>
+        </nav>
 
 
         {# page head banner #}
@@ -76,10 +73,9 @@
             {% block main %}{% endblock %}
         </main>
 
-        <footer class="mb-5 small text-center text-muted">
+        {# <footer class="mb-5 small text-center text-muted">
             Copyright
-        </footer>
-        </div>
+        </footer> #}
 
     </body>
 
