--- a/FINAL_project/templates/edit.html
+++ b/FINAL_project/templates/edit.html
@@ -18,7 +18,7 @@
         <input class="form-control mx-auto w-auto" name="title" id="title" value="{{row.title}}">
     </div>
     <div class="mb-3">
-        <input class="form-control mx-auto w-auto" name="body" id="body" value="{{row.body}}">
+        <textarea class="form-control mx-auto w-auto" name="body" rows="10" cols="100" id="body">{{row.body}}</textarea>
     </div>
     <button class="btn btn-outline-success" type="submit">Update</button>
 </form>
