--- a/FINAL_project/templates/layout.html
+++ b/FINAL_project/templates/layout.html
@@ -59,7 +59,7 @@
 
 
         {# page head banner #}
-        <header>
+        <header style="font-family: Papyrus;">
         <!--https://bootstrapious.com/p/bootstrap-static-header-->
         <div style="background: url(https://wallpaperaccess.com/full/3088717.jpg)" class="jumbotron bg-cover text-white">
         <div class="container py-5 text-center">
