Sat, Dec 11, 2021, 10:19 PM +00:00

--- a/FINAL_project/static/styles.css
+++ b/FINAL_project/static/styles.css
@@ -4,6 +4,11 @@ nav .navbar-brand
     font-size: xx-large;
 }
 
+/* Alternative Font */
+treehole-font
+{
+    font-family: Papyrus;
+}
 
 /* Colors for brand */
 nav .navbar-brand .blue
