--- a/FINAL_project/templates/layout.html
+++ b/FINAL_project/templates/layout.html
@@ -20,7 +20,7 @@
     <body>
         <nav class="bg-light border navbar navbar-expand-md navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/"> <span class="green">Yale Tree Hole</span></a>
+                <a class="navbar-brand" href="/"> <span class="green" class="treehole-font">Yale Tree Hole</span></a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -59,7 +59,7 @@
 
 
         {# page head banner #}
-        <header style="font-family: Papyrus;">
+        <header class="treehole-font">
         <!--https://bootstrapious.com/p/bootstrap-static-header-->
         <div style="background: url(https://wallpaperaccess.com/full/3088717.jpg)" class="jumbotron bg-cover text-white">
         <div class="container py-5 text-center">
