--- a/FINAL_project/templates/layout.html
+++ b/FINAL_project/templates/layout.html
@@ -20,7 +20,7 @@
     <body>
         <nav class="bg-light border navbar navbar-expand-md navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/"> <span class="green" class="treehole-font">Yale Tree Hole</span></a>
+                <a class="navbar-brand" href="/"> <span class="treehole-font" style="color:green;">Yale Tree Hole</span></a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
