Sat, Dec 11, 2021, 10:23 PM +00:00

--- a/FINAL_project/templates/hello.html
+++ b/FINAL_project/templates/hello.html
@@ -20,6 +20,7 @@
     <a href="/index">
     <button type="button" class="btn btn-outline-success">Click here if you are ready to enter Yale Tree Hole. </button>
     </a>
-
 </div>
+
+<img src="https://i.pinimg.com/originals/77/8d/cd/778dcd73456305d6578e972364cd0503.jpg">
 {% endblock %}
