Sat, Dec 11, 2021, 10:26 PM +00:00

--- a/FINAL_project/templates/hello.html
+++ b/FINAL_project/templates/hello.html
@@ -17,10 +17,12 @@
     <p>Don’t say things you wouldn’t want to hear being said to you. </p>
     <p>Don’t post content that you know will get you/anyone else into legal trouble. </p>
     <p>If you think you might need professional mental health support, please click <a href="https://yalehealth.yale.edu/directory/departments/mental-health-counseling">here.</a></p>
+    <img src="https://i.pinimg.com/originals/77/8d/cd/778dcd73456305d6578e972364cd0503.jpg">
+    <br>
+    <br>
     <a href="/index">
     <button type="button" class="btn btn-outline-success">Click here if you are ready to enter Yale Tree Hole. </button>
     </a>
-
 </div>
 {% endblock %}
 
