Sat, Dec 11, 2021, 10:34 PM +00:00

--- a/FINAL_project/templates/searchresult.html
+++ b/FINAL_project/templates/searchresult.html
@@ -40,7 +40,7 @@
                          <!-- reply to each post -->
                         <form action="/comment" method="post">
                                 <input type="text" class="form-control" name="reply" id="reply" placeholder="Leave a comment" aria-describedby="basic-addon2">
-                                    <button class="btn btn-outline-primary" type="submit" name={{row.post_id}}>Reply</button>
+                                    <button class="btn btn-outline-success" type="submit" name={{row.post_id}}>Reply</button>
                         </form>
                     </td>
                     <td class="text-end">{{row.created}}</td>
