Sat, Dec 11, 2021, 10:39 PM +00:00

--- a/FINAL_project/static/styles.css
+++ b/FINAL_project/static/styles.css
@@ -4,6 +4,11 @@ nav .navbar-brand
     font-size: xx-large;
 }
 
+/* General font */
+*{
+    font-family: Garamond;
+}
+
 /* Alternative Font */
 .treehole-font
 {
