--- a/FINAL_project/static/styles.css
+++ b/FINAL_project/static/styles.css
@@ -4,10 +4,10 @@ nav .navbar-brand
     font-size: xx-large;
 }
 
-/* General font */
+/* General font
 *{
-    font-family: Georgia;
-}
+    font-family: Garamond;
+} */
 
 /* Alternative Font */
 .treehole-font
