--- a/FINAL_project/templates/layout.html
+++ b/FINAL_project/templates/layout.html
@@ -59,13 +59,11 @@
 
 
         {# page head banner #}
-        <header>
+        <header class="treehole-font">
         <!--https://bootstrapious.com/p/bootstrap-static-header-->
         <div style="background: url(https://wallpaperaccess.com/full/3088717.jpg)" class="jumbotron bg-cover text-white">
         <div class="container py-5 text-center">
-        <div class="treehole-font">
         {% block header %}{% endblock %}
-        </div>
         </div>
         </div>
         </header>
