--- a/FINAL_project/templates/layout.html
+++ b/FINAL_project/templates/layout.html
@@ -11,10 +11,29 @@
         <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
         <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"></script>
 
-        <link href="/static/styles.css" rel="stylesheet">
+        <link href="/static/styles.css" rel="stylesheet" id="theme-link">
+
+        <script>
+            
+            function myFunction() {
+                // Select the button
+                const btn = document.querySelector(".toggle");
+                // Select the stylesheet <link>
+                const theme = document.querySelector("#theme-link");
+                if (theme.getAttribute("href") == "static/dark.css") {
+                    // ... switch it to "light-theme.css"
+                    theme.href = "static/styles.css";
+                    
+                // Otherwise...
+                } else {
+                    // ... then switch it to "dark-theme.css"
+                    theme.href = "static/dark.css";
+                }
+            }
+
+        </script>
 
         <title> Treehole: {% block title %}{% endblock %}</title>
-
     </head>
 
     <body>
@@ -46,6 +65,11 @@
                             </li>
                             <li class="nav-item"><a class="nav-link" href="/reset_password">Reset Password</a></li>
                             <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
+                            <!-- Rounded switch -->
+                            <label class="switch">
+                                <input onclick="myFunction()" class="toggle" type="checkbox">
+                                <span class="slider round"></span>
+                            </label>
                         </ul>
                     {% else %}
                         <ul class="navbar-nav ms-auto mt-2">
