--- a/FINAL_project/templates/hello.html
+++ b/FINAL_project/templates/hello.html
@@ -17,7 +17,7 @@
     <p>Don’t say things you wouldn’t want to hear being said to you. </p>
     <p>Don’t post content that you know will get you/anyone else into legal trouble. </p>
     <p>If you think you might need professional mental health support, please click <a href="https://yalehealth.yale.edu/directory/departments/mental-health-counseling">here.</a></p>
-    <p><h5><em>If you find any disturbing content and want to report it to us, please contact us by our <a href = "mailto: lindsay.chen@yale.edu">email</a>.</em></h5></p>
+    <p><h5><em>If you find any disturbing content and want to report it to us, please contact us by reaching out to <a href = "mailto: xinning.shao@yale.edu">Xinning</a>, <a href = "mailto: wenyi.xu@yale.edu">Vivian</a>, or <a href = "mailto: lindsay.chen@yale.edu">Lindsay</a>.</em></h5></p>
     <p><h5><em>If you think you might need professional mental health support, please click <a href="https://yalehealth.yale.edu/directory/departments/mental-health-counseling">here.</a></em></h5></p>
     <img src="https://i.pinimg.com/originals/77/8d/cd/778dcd73456305d6578e972364cd0503.jpg">
     <br>
