--- a/FINAL_project/templates/edit.html
+++ b/FINAL_project/templates/edit.html
@@ -20,7 +20,7 @@
     <div class="mb-3">
         <textarea class="form-control mx-auto w-auto" name="body" rows="10" cols="100" id="body">{{row.body}}</textarea>
     </div>
-    <button class="btn btn-outline-success" type="submit">Update</button>
+    <button class="btn btn-outline-success" id="btnupdate" type="submit">Update</button>
 </form>
 {% endfor %}
 
