--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -45,7 +45,7 @@
                          <!-- reply to each post -->
                         <form action="/comment" method="post">
                                 <input type="text" class="form-control" name="reply" id="reply" placeholder="Leave a comment" aria-describedby="basic-addon2">
-                                    <button class="btn btn-outline-success" type="submit" name={{row.post_id}}>Reply</button>
+                                    <button class="btn btn-outline-success" id="btnreply" type="submit" name={{row.post_id}}>Reply</button>
                         </form>
                     </td>
                     <td class="text-end">{{row.created}}</td>
