--- a/FINAL_project/static/dark.css
+++ b/FINAL_project/static/dark.css
@@ -8,7 +8,7 @@ nav .navbar-brand
 * {
     font-family: Papyrus;
     color: #D8D8D6;
-    
+
   }
 
 html, body
@@ -26,10 +26,10 @@ html, body
  #dark {
     color: #D8D8D6;
     background-color: #878B7F;
-    
+
 }
 
-#title, #post, #reply, #btnsubmit, #btnreply, #btnpost, #btnedit, #btndelete, #btnupdate {
+#title, #post, #reply, #btnsubmit, #btnreply, #btnpost, #btnedit, #btndelete, #btnupdate, #btnclick {
   background-color: #D8D8D6;
 }
 
@@ -41,14 +41,14 @@ html, body
     width: 60px;
     height: 34px;
   }
-  
+
   /* Hide default HTML checkbox */
   .switch input {
     opacity: 0;
     width: 0;
     height: 0;
   }
-  
+
   /* The slider */
   .slider {
     position: absolute;
@@ -61,7 +61,7 @@ html, body
     -webkit-transition: .4s;
     transition: .4s;
   }
-  
+
   .slider:before {
     position: absolute;
     content: "";
@@ -73,26 +73,26 @@ html, body
     -webkit-transition: .4s;
     transition: .4s;
   }
-  
+
   input:checked + .slider {
     background-color: #878B7F;
   }
-  
+
   input:focus + .slider {
     box-shadow: 0 0 1px #2196F3;
   }
-  
+
   input:checked + .slider:before {
     -webkit-transform: translateX(26px);
     -ms-transform: translateX(26px);
     transform: translateX(26px);
   }
-  
+
   /* Rounded sliders */
   .slider.round {
     border-radius: 34px;
   }
-  
+
   .slider.round:before {
     border-radius: 50%;
   }
