Sun, Dec 12, 2021, 3:53 PM +00:00

--- a/FINAL_project/static/dark.css
+++ b/FINAL_project/static/dark.css
@@ -29,7 +29,7 @@ html, body
 
 }
 
-#title, #post, #reply, #btnsubmit, #btnreply, #btnpost, #btnedit, #btndelete, #btnupdate, #btnclick {
+#title, #post, #reply, #btnsubmit, #btnreply, #btnpost, #btnedit, #btndelete, #btnupdate {
   background-color: #D8D8D6;
 }
 
