--- a/FINAL_project/templates/layout.html
+++ b/FINAL_project/templates/layout.html
@@ -30,7 +30,15 @@
                     theme.href = "static/dark.css";
                 }
             }
-            
+            const pageAccessedByReload = (
+                (window.performance.navigation && window.performance.navigation.type === 1) ||
+                    window.performance
+                    .getEntriesByType('navigation')
+                    .map((nav) => nav.type)
+                    .includes('reload')
+                );
+
+            alert(pageAccessedByReload);
 
         </script>
 
