Mon, Dec 13, 2021, 1:28 AM +00:00

--- a/FINAL_project/templates/hello.html
+++ b/FINAL_project/templates/hello.html
@@ -18,7 +18,7 @@
     <p>Don’t post content that you know will get you/anyone else into legal trouble. </p>
     <p><h5><em>If you find any disturbing content and want to report it to us, please contact us by reaching out to <a href = "mailto: xinning.shao@yale.edu">Xinning</a>, <a href = "mailto: wenyi.xu@yale.edu">Vivian</a>, or <a href = "mailto: lindsay.chen@yale.edu">Lindsay</a>.</em></h5></p>
     <p><h5><em>If you think you might need professional mental health support, please click <a href="https://yalehealth.yale.edu/directory/departments/mental-health-counseling">here.</a></em></h5></p>
-    <img src="https://i.pinimg.com/originals/77/8d/cd/778dcd73456305d6578e972364cd0503.jpg">
+    <img src="https://i.pinimg.com/originals/77/8d/cd/778dcd73456305d6578e972364cd0503.jpg" alt="Welcome">
     <br>
     <br>
     <a href="/index">
