Mon, Dec 13, 2021, 1:57 AM +00:00

--- a/FINAL_project/templates/seekhelp.html
+++ b/FINAL_project/templates/seekhelp.html
@@ -17,7 +17,7 @@
 <p><a href="https://walden.sites.yale.edu/">Walden Peer Counseling </a><p>
 
 {# credit to TA Kelly Chen '23 for helping with display image error #}
-<img src={{ url_for("static", filename = "seekhelp.jpg") }}>
+<img src={{ url_for("static", filename = "seekhelp.jpg") }} alt="seekhelp">
 
 
 {% endblock %}
